# api/openapi.yaml
@@ -362,15 +362,6 @@ components:
           type: string
         full_path:
           type: string
-        media_type:
-          type: string
-        byte_size:
-          type: integer
-          format: int64
-          minimum: 0
-        content_hash:
-          type: string
-          pattern: "^sha256-[a-f0-9]{64}$"
         filesystem_created_at:
           type: string
           format: date-time
